--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,15 @@
     max-width: 1000px;
     margin: 50px auto;
 }
+main {
+    padding: 10px 50px;
+}
 h1, footer {
     background-color: navy;
     color: white;
     padding: 10px;
     text-align:center;
+    border-radius: 15px;
 }
 footer a {
     color: white;
@@ -15,4 +19,7 @@ footer a {
 img{
     float: right;
     margin-top: -70px;
+}
+li {
+    padding: 5px 0;
 }
