--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+body {
+    font-family: Raleway, san-serif;
+}
 #content {
     width: 80%;
     max-width: 1000px;
@@ -7,7 +11,7 @@ main {
     padding: 10px 50px;
 }
 h1, footer {
-    background-color: navy;
+    background-color: #326477;
     color: white;
     padding: 10px;
     text-align:center;
@@ -19,7 +23,12 @@ footer a {
 img{
     float: right;
     margin-top: -70px;
+    width: 20%;
+    border-radius: 5px;
 }
 li {
     padding: 5px 0;
+}
+li a, li a:visited{
+    color: #326477;
 }
