media query added

--- a/css/main1.css
+++ b/css/main1.css
@@ -2,11 +2,6 @@
 body {
     font-family: Raleway, san-serif;
 }
-#content {
-    width: 80%;
-    max-width: 1000px;
-    margin: 50px auto;
-}
 main {
     padding: 10px 50px;
 }
@@ -14,16 +9,10 @@ h1, footer {
     background-color: #326477;
     color: white;
     padding: 10px;
-    text-align:center;
-    border-radius: 15px;
+    text-align:center; 
 }
 footer a {
     color: white;
-}
-img{
-    float: right;
-    width: 20%;
-    border-radius: 5px;
 }
 li {
     padding: 5px 0;
@@ -32,3 +21,18 @@ li a, li a:visited{
     color: #326477;
 }
 
+@media screen and (min-width: 500px) {
+    #content {
+        width: 80%;
+        max-width: 1000px;
+        margin: 50px auto;
+    }
+    h1, footer {
+        border-radius: 15px;
+    }
+    img{
+        float: right;
+        width: 20%;
+        border-radius: 5px;
+    }
+}
