--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
-body {
-    font-family: Raleway, san-serif;
+
+@font-face {
+    font-family: 'ralewaymedium';
+    src: url('../fonts/raleway-medium-webfont.woff2') format('woff2'),
+         url('../fonts/raleway-medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
-#content {
-    width: 80%;
-    max-width: 1000px;
-    margin: 50px auto;
+
+body {
+    font-family: ralewaymedium, san-serif;
 }
 main {
     padding: 10px 50px;
 }
+img {
+    width: 30%;
+    display: block;
+    margin: 0 auto;
+}
 h1, footer {
+    margin: 0;
     background-color: #326477;
     color: white;
     padding: 10px;
-    text-align:center;
-    border-radius: 15px;
+    text-align:center; 
+}
+h2 {
+    text-align: center;
 }
 footer a {
     color: white;
-}
-img{
-    float: right;
-    width: 20%;
-    border-radius: 5px;
 }
 li {
     padding: 5px 0;
@@ -31,3 +37,19 @@ li {
 li a, li a:visited{
     color: #326477;
 }
+
+@media screen and (min-width: 500px) {
+    #content {
+        width: 80%;
+        max-width: 1000px;
+        margin: 50px auto;
+    }
+    h1, footer {
+        border-radius: 15px;
+    }
+    img{
+        float: right;
+        width: 20%;
+        border-radius: 5px;
+    }
+} 
