--- a/lesson02/css/style.css
+++ b/lesson02/css/style.css
@@ -4,7 +4,11 @@ h1, h2, h3{
     font-family: Marcellus, serif;
     text-align: center;
 }
-
+main {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 45px;
+}
 p {
     text-align: center;
     padding: 15px;
@@ -40,9 +44,7 @@ hr {
 
 @media screen and (min-width: 550px) {
     main {
-        display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 45px;
     }
     img {
         max-width: 400px;
@@ -51,10 +53,8 @@ hr {
 }
 
 @media screen and (min-width: 900px) {
-    main {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 45px;
+    main {   
+        grid-template-columns: 1fr 1fr 1fr; 
     }
 
 }
