--- a/lesson05/css/style.css
+++ b/lesson05/css/style.css
@@ -130,7 +130,7 @@ nav .active a {
     margin: 20px;
 }
 .prestonarticle p {
-    padding: 0 20px;
+    padding: 20px;
 }
 .contentbox {
     margin: 10px auto;
