--- a/samaritan/styles.css
+++ b/samaritan/styles.css
@@ -8,7 +8,7 @@
 .main-scroll {
     background-image: url(images/wounded.png), url(images/path.png);
     background-repeat: no-repeat, no-repeat; 
-    background-size: auto, fit;
+    background-size: auto, cover;
     background-color: #e9e0d0;
     background-attachment: fixed;
     background-position: 50% 90%;
@@ -38,8 +38,8 @@ video {
     text-transform: none;
     margin: 0 auto;
     opacity: 0.0;
-    animation: fadeIn ease-in 12s;
-    -webkit-animation: fadeIn ease-in 12s;
+    animation: fadeIn ease-in 8s;
+    -webkit-animation: fadeIn ease-in 8s;
     transition-timing-function: ease-in;
     /* transition: visibility 3000 ease-in-out, opacity 3000 ease-in-out; */
     }
@@ -132,17 +132,21 @@ h3 {
 }
 
 h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-text {
-    padding-bottom: 0;
-    margin-bottom: 0;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
     padding-left: 50px;
     padding-right: 50px;
     text-align: center;
+    line-height: 2em;
 }
 .scroll-box1, .scroll-box2, .scroll-box3 {
     
     height: 200vh;
 }
-
+.scroll-box1 .wounded-text {
+    position: relative;
+    top: 350px;
+}
 .scroll-box4 {
     height: 300vh;
 }
