--- a/samaritan/stylestest.css
+++ b/samaritan/stylestest.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .main-scroll {
@@ -15,65 +14,37 @@
 
 }
 
-html, body {
+/* html, body {
     height: 100%;
     /* background-color: #e9e0d0; */
-}
+/* } */ 
 
 
-h1 {
-    text-align: center;
-    padding-top: 100px;
-    font-size: 2em;
-}
-h2 {
-    font-size: 2em;
-}
+
 h3 {
     line-height: 1.7em;
     margin-bottom: 75px;
     padding: 20px;
     font-size: 1.2em;
 }
-.priest, .levite, .samaritan{
-    
-    display: block;
-    margin: 0 auto;
-}
 
-.samaritan {
-    padding-left: 10%;
-}
 
-h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-text {
+h3.wounded-text {
     padding-bottom: 50px;
     margin-bottom: 50px;
     padding-left: 150px;
     padding-right: 150px;
     text-align: center;
 }
-.scroll-box1, .scroll-box2, .scroll-box3 {
+.scroll-box1 {
     
     height: 200vh;
 }
-.scroll-box1 .wounded-text {
+/* .scroll-box1 .wounded-text {
     position: relative;
     top: 350px;
-}
-.scroll-box4 {
-    height: 300vh;
-}
-.panel {
-    height: 100vh;
-}
-.panel h2 {
-    padding-top: 300px;
-    text-align: center;
-    margin: 100px;
-    line-height: 2em;
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
+} */
+
 
 @media screen and (max-width: 750px) {
     .main-scroll {
@@ -85,7 +56,7 @@ h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-te
         background-position: bottom center;
     
     }
-    h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-text {
+    h3.wounded-text {
         padding-left: 50px;
         padding-right: 50px;
     }
@@ -95,12 +66,7 @@ h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-te
     padding: 20px;
     font-size: .9em;
     }
-    .scroll-box4 h3 {
-        margin-top: -30px;
-    }
-    .samaritan {
-        padding-top: 50px;
-    }
+    
 }
 
 @media screen and (max-width: 450px) {
@@ -110,23 +76,12 @@ h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-te
     
         font-size: 1em;
         }
-    h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-text {
+    h3.wounded-text {
             padding-bottom: 50px;
             margin-bottom: 50px;
             padding-left: 0;
             padding-right: 0;
             text-align: center;
     }
-    .scroll-box4 h3 {
-        margin-top: -30px;
-        font-size: .9em;
-    }
-    .panel h2 {
-        padding-top: 300px;
-        text-align: center;
-        margin: 40px;
-        line-height: 2em;
-        padding-bottom: 0;
-        margin-bottom: 0;
-    }
+    
 }
