--- a/samaritan/styles.css
+++ b/samaritan/styles.css
@@ -4,16 +4,31 @@
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
-.main-scroll {
+.background {
+    position: fixed;
+    z-index: -99;
+    top: 0;
+    width: 100vh;
+}
+.background img {
+    
+    height: 100vh;
+}
+.background .wounded {
+    position: absolute;
+    top: 55%;
+    left: 33%;
+    width: 55%;
+    height: 40%;
+}
+/* .main-scroll {
     background-image: url(images/wounded.png), url(images/path.png);
     background-repeat: no-repeat, no-repeat; 
     background-size: auto, cover;
     background-color: #e9e0d0;
     background-attachment: fixed;
     background-position: 50% 90%;
-
-}
+} */
 
 html, body {
     height: 100%;
@@ -103,7 +118,9 @@ video {
     text-align: center;
     font-size: 1.3em;
 }
-
+.main-scroll {
+    width: 100%;
+}
 .title, .panel {
     /* background-color: #e9e0d0; */
 }
@@ -134,12 +151,12 @@ h3 {
 h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-text {
     padding-bottom: 50px;
     margin-bottom: 50px;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 120px;
+    padding-right: 120px;
     text-align: center;
 }
 .scroll-box1, .scroll-box2, .scroll-box3 {
-    
+    z-index: 1;
     height: 200vh;
 }
 .scroll-box1 .wounded-text {
@@ -150,7 +167,8 @@ h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-te
     height: 300vh;
 }
 .panel {
-    height: 100vh;
+    height: 200vh;
+    background-color: white;
 }
 .panel h2 {
     padding-top: 300px;
@@ -162,7 +180,7 @@ h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-te
 }
 
 @media screen and (max-width: 750px) {
-    .main-scroll {
+    /* .main-scroll {
         background-image: url(images/wounded.png), url(images/pathsm.png);
         background-repeat: no-repeat, no-repeat; 
         background-size: 80%, cover;
@@ -170,6 +188,24 @@ h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-te
         background-attachment: fixed;
         background-position: bottom center;
     
+    } */
+    .background .wounded {
+        position: absolute;
+        top: 60%;
+        left: 30%;
+        width: 40%;
+        height: 30%;
+    }
+
+    .priest, .levite {
+    width: 28%;
+    margin-top: 3.5em;
+    }
+    .samaritan{
+        margin-right: 15%;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        width: 36%;
     }
     h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-text {
         padding-left: 50px;
@@ -202,6 +238,44 @@ h3.wounded-text, h3.priest-text, h3.levite-text, h3.levite-text, h3.samaritan-te
             padding-left: 0;
             padding-right: 0;
             text-align: center;
+    }
+    .background .wounded {
+        position: absolute;
+        top: 60%;
+        left: 10%;
+        width: 40%;
+        height: 30%;
+    }
+
+    .priest {
+    width: 40%;
+    margin-top: 9em;
+    }
+    .levite {
+        width: 40%;
+        margin-top: 6em;
+    }
+    .samaritan{
+        margin-right: 15%;
+        margin-top: 4em;
+        margin-bottom: 2em;
+        width: 45%;
+    }
+    h3.wounded-text {
+        margin-top: -10%;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    
+    h3.priest-text, h3.levite-text, h3.levite-text {
+        padding-left: 50px;
+        padding-right: 50px;
+        margin-top: -5%;
+    }
+    h3.samaritan-text {
+        padding-left: 50px;
+        padding-right: 50px;
+        margin-top: 45%;
     }
     .scroll-box4 h3 {
         margin-top: -30px;
