--- a/wint22/lesson3/css/styles.css
+++ b/wint22/lesson3/css/styles.css
@@ -10,6 +10,8 @@ body {
     width: 85%;
     margin: 0 auto;
     max-width: 1200px;
+    border-radius: 7px;
+    
 }
 h1 {
     font-size: 2em;
@@ -56,6 +58,8 @@ nav ul {
     list-style-type: none;
     background-color: #8F6B60;
     margin: 0 auto;
+    border-radius: 5px;
+    box-shadow: 3px 7px 10px #888888;
 }
 nav li {
     padding: 20px 60px 20px 60px;
