--- a/wint22/chamber/week5/css/styles.css
+++ b/wint22/chamber/week5/css/styles.css
@@ -9,11 +9,20 @@ body {
     margin: 0 auto;
 }
 header {
-    font-size: .8em;
+    
     color: #309981;
     height: 120px;
 }
-
+header h1 {
+    font-size: 3em;
+    margin: 0;
+}
+header p {
+    font-size: 1.2em;
+    padding: 0;
+    margin: 0;
+    text-align:center;
+}
 #msg-box {
     display: none;
 }
@@ -139,16 +148,19 @@ h4 {
     grid-column: 2/3;
 }
 #social {
-    grid-column: 6/8;
+    grid-column: 7/8;
 }
 nav {
     /* background-color:  #309981; */
     grid-column: 1/2;
     grid-row: 1/2;
     position: fixed;
-    top:20px;
-    left: 20px;
+    top: 30px;
+    left: 30px;
     z-index: 1;
+}
+nav span{
+    font-size: 1.5em;
 }
 nav ul {
     list-style: none;
@@ -204,7 +216,7 @@ nav li:first-child {
 }
 #top header {
     width: 80%;
-    grid-column: 3/6;
+    grid-column: 3/7;
 }
 .contentbox {
     margin: 10px auto;
@@ -356,6 +368,9 @@ nav ul li:first-child {
 nav ul li {
     display: block;
 }
+header {
+    font-size: 1em;
+}
   #logo {
     grid-column: 1/2;
     grid-row: 1/2;
@@ -370,6 +385,9 @@ nav ul li {
 nav {
     grid-column: 4/6;
     width: 100%;
+}
+nav li {
+    padding: 25px;
 }
 #social {
     grid-column: 7/8;
