--- a/wint22/chamber/week5/css/styles.css
+++ b/wint22/chamber/week5/css/styles.css
@@ -150,6 +150,10 @@ h4 {
 #social {
     grid-column: 7/8;
 }
+#social img {
+    width: 2em;
+    padding: 5px;
+}
 nav {
     /* background-color:  #309981; */
     grid-column: 1/2;
@@ -264,7 +268,6 @@ nav li:first-child {
     background-color:  #309981;
     padding: 10px 0;
 }
-
 footer {
     padding: 0;
 }
@@ -282,6 +285,17 @@ footer p {
     margin: 10px 0 0 0;
     color: white;
     text-align: center;
+}
+#top-footer {
+    background-color:  #309981;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+#top-footer #logo {
+    width: 100px;
+    
 }
 .mail {
     margin-top: 20px;
@@ -443,5 +457,7 @@ nav li {
     #logo {
         margin: 0;
     }
-
+    #top-footer {
+        flex-direction: row;
+    }
 }
