--- a/wint22/chamber/week5/css/styles.css
+++ b/wint22/chamber/week5/css/styles.css
@@ -160,7 +160,6 @@ nav {
     grid-row: 1/2;
     position: fixed;
     top: 30px;
-    left: 30px;
     z-index: 1;
 }
 nav span{
@@ -172,21 +171,28 @@ nav ul {
     flex-direction: column;
     padding: 0;
     margin: 0;
+    width: 100%;
 }
 nav li {
     padding: 15px;
     display: none;
+    width: 200px;
 }
 nav li a {
     text-decoration: none;
     color: white;
     font-size: 1.2em;
+    
 }
 nav li a:first-child {
+   
     color: black;
 }
 nav li:hover {
     background-color: #FAD4C8;
+}
+nav li:hover:first-child {
+    width: 40px;
 }
 nav li a:hover {
     color: black;
@@ -198,8 +204,18 @@ nav li:first-child {
     display: block;
     background-color: #309981;
 }
+.responsive li a {
+    width: 200px;
+}
 .ham {
     text-align: center;
+    
+}
+.ham span {
+    background-color:#FAD4C8;
+    border: 1px solid black;
+    
+    width: 38px;
 }
 .ham span:nth-child(1) {
     display: block;
@@ -239,10 +255,10 @@ nav li:first-child {
 }
 #hero #btn {
     position: absolute;
-    bottom: 30px;
+    bottom: 50px;
     right: 30px;
     background-color: #FAD4C8;
-    padding: 20px; 
+    
     box-shadow: 0 0 10px#FAD4C8; 
     border-radius: 10px;
 }
@@ -251,13 +267,13 @@ nav li:first-child {
     display: block;
     margin: 0 auto;
 }
-#join #btn, #btn2 {
+#btn .join, #btn2 {
     background-color: #FAD4C8;
     padding: 20px; 
-    box-shadow: 0 0 10px#FAD4C8; 
+    box-shadow: 0 0 10px#FAD4C8;
+    border: 1px solid black; 
     border-radius: 10px;
     text-align: center;
-    width: 80%;
     margin: 0 auto;
     margin-top: 15px;
 }
