--- a/wint22/chamber/week4/andres-small.css
+++ b/wint22/chamber/week4/andres-small.css
@@ -152,6 +152,14 @@ main {
     display:none;
     
 }
+
+/* RIVERS PAGE CSS */
+
+
+
+
+
+
 /*.navigation {
     display: flex;
     flex-direction: column;
