--- a/wint22/chamber/week6/css/styles.css
+++ b/wint22/chamber/week6/css/styles.css
@@ -93,6 +93,7 @@ main {
     #hero img {
         width: 100%;
         height: 300px;
+        object-fit: cover; /*to avoid distortion*/
     }
     .msg {
         display: none;
