--- a/wint22/chamber/week9/directory.css
+++ b/wint22/chamber/week9/directory.css
@@ -52,7 +52,7 @@ table a {
 }
 @media screen and (max-width:900px) {
 
-    .table tr, table td {
+    .table tr{
         display: block;
         border: none;
         line-height: 2.5rem;
