--- a/wint22/styles/main.css
+++ b/wint22/styles/main.css
@@ -26,9 +26,11 @@ nav, h2 {
 nav a {
     color: black;
     padding: 20px;
-    text-decoration: none;
     line-height: 1.5em;
     font-size: 1em;
+}
+nav a:hover {
+     text-decoration: none;
 }
 li {
     font-size: 1em;
